--- a/app/src/main/res/layout/activity_movie_detail.xml
+++ b/app/src/main/res/layout/activity_movie_detail.xml
@@ -43,6 +43,31 @@
                 android:layout_height="wrap_content"
                 android:textAppearance="?android:textAppearanceMedium"
                 tools:text="6.8" />
+
+            <Button
+                android:id="@+id/action_add_watchlist"
+                android:layout_width="wrap_content"
+                android:layout_height="36dp"
+                android:layout_marginTop="4dp"
+                android:background="@color/colorAccent"
+                android:paddingLeft="16dp"
+                android:paddingRight="16dp"
+                android:scaleType="centerInside"
+                android:text="@string/movie_detail_add_watchlist"
+                android:visibility="gone" />
+
+            <Button
+                android:id="@+id/action_remove_watchlist"
+                android:layout_width="wrap_content"
+                android:layout_height="36dp"
+                android:layout_marginTop="4dp"
+                android:background="@android:color/darker_gray"
+                android:paddingLeft="16dp"
+                android:paddingRight="16dp"
+                android:scaleType="centerInside"
+                android:text="@string/movie_detail_remove_watchlist"
+                android:visibility="gone" />
+
         </LinearLayout>
     </LinearLayout>
 
