--- a/app/src/main/res/layout/activity_movie_detail.xml
+++ b/app/src/main/res/layout/activity_movie_detail.xml
@@ -1,81 +1,84 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:layout_margin="16dp"
-    android:orientation="vertical">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
-
-        <ImageView
-            android:id="@+id/movie_detail_poster_image"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginRight="@dimen/margin_large"
-            android:contentDescription="@string/content_description_movie_poster" />
+        android:layout_height="match_parent"
+        android:layout_margin="16dp"
+        android:orientation="vertical">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:orientation="horizontal">
 
-            <TextView
-                android:id="@+id/movie_detail_title"
+            <ImageView
+                android:id="@+id/movie_detail_poster_image"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textAppearance="?android:textAppearanceLarge"
-                tools:text="Title" />
+                android:layout_marginRight="@dimen/margin_large"
+                android:contentDescription="@string/content_description_movie_poster" />
 
-            <TextView
-                android:id="@+id/movie_detail_release_date"
-                android:layout_width="wrap_content"
+            <LinearLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textAppearance="?android:textAppearanceMedium"
-                tools:text="2017-03-16" />
+                android:orientation="vertical">
 
-            <TextView
-                android:id="@+id/movie_detail_vote_average"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textAppearance="?android:textAppearanceMedium"
-                tools:text="6.8" />
+                <TextView
+                    android:id="@+id/movie_detail_title"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textAppearance="?android:textAppearanceLarge"
+                    tools:text="Title" />
 
-            <Button
-                android:id="@+id/action_add_watchlist"
-                android:layout_width="wrap_content"
-                android:layout_height="36dp"
-                android:layout_marginTop="4dp"
-                android:background="@color/colorAccent"
-                android:paddingLeft="16dp"
-                android:paddingRight="16dp"
-                android:scaleType="centerInside"
-                android:text="@string/movie_detail_add_watchlist"
-                android:visibility="gone" />
+                <TextView
+                    android:id="@+id/movie_detail_release_date"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textAppearance="?android:textAppearanceMedium"
+                    tools:text="2017-03-16" />
 
-            <Button
-                android:id="@+id/action_remove_watchlist"
-                android:layout_width="wrap_content"
-                android:layout_height="36dp"
-                android:layout_marginTop="4dp"
-                android:background="@android:color/darker_gray"
-                android:paddingLeft="16dp"
-                android:paddingRight="16dp"
-                android:scaleType="centerInside"
-                android:text="@string/movie_detail_remove_watchlist"
-                android:visibility="gone" />
+                <TextView
+                    android:id="@+id/movie_detail_vote_average"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textAppearance="?android:textAppearanceMedium"
+                    tools:text="6.8" />
 
+                <Button
+                    android:id="@+id/action_add_watchlist"
+                    android:layout_width="wrap_content"
+                    android:layout_height="36dp"
+                    android:layout_marginTop="4dp"
+                    android:background="@color/colorAccent"
+                    android:paddingLeft="16dp"
+                    android:paddingRight="16dp"
+                    android:scaleType="centerInside"
+                    android:text="@string/movie_detail_add_watchlist"
+                    android:visibility="gone" />
+
+                <Button
+                    android:id="@+id/action_remove_watchlist"
+                    android:layout_width="wrap_content"
+                    android:layout_height="36dp"
+                    android:layout_marginTop="4dp"
+                    android:background="@android:color/darker_gray"
+                    android:paddingLeft="16dp"
+                    android:paddingRight="16dp"
+                    android:scaleType="centerInside"
+                    android:text="@string/movie_detail_remove_watchlist"
+                    android:visibility="gone" />
+
+            </LinearLayout>
         </LinearLayout>
-    </LinearLayout>
 
-    <TextView
-        android:id="@+id/movie_detail_overview"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:textAppearance="?android:textAppearanceMedium"
-        tools:text="overview" />
-</LinearLayout>
+        <TextView
+            android:id="@+id/movie_detail_overview"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            android:textAppearance="?android:textAppearanceMedium"
+            tools:text="overview" />
+    </LinearLayout>
+</layout>
