--- a/app/src/main/res/layout/activity_movie_detail.xml
+++ b/app/src/main/res/layout/activity_movie_detail.xml
@@ -8,6 +8,17 @@
         android:layout_margin="@dimen/margin_large"
         android:orientation="vertical">
 
+        <FrameLayout
+            android:id="@+id/movie_detail_loading_indicator_frame"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+            <ProgressBar
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:indeterminate="false" />
+        </FrameLayout>
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -29,6 +40,8 @@
                     android:id="@+id/movie_detail_title"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:ellipsize="end"
+                    android:maxLines="1"
                     android:textAppearance="?android:textAppearanceLarge"
                     tools:text="Title" />
 
@@ -65,7 +78,7 @@
 
         <TextView
             android:id="@+id/movie_detail_overview"
-            style="@style/MovieDetailLabel"
+            style="@style/MediumTextView"
             tools:text="overview" />
 
         <TextView
@@ -82,9 +95,16 @@
             android:src="@android:drawable/ic_media_play" />
 
         <TextView
-            android:id="@+id/movie_detail_review"
+            android:id="@+id/movie_detail_review_label"
             style="@style/MovieDetailLabel"
-            android:text="@string/movie_detail_label_review" />
+            android:text="@string/movie_detail_label_review"
+            android:visibility="gone" />
+
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/movie_detail_review_recycler_view"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginTop="@dimen/margin_small" />
 
     </LinearLayout>
 </layout>
