--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -9,6 +9,8 @@
     <dimen name="padding_large">16dp</dimen>
 
     <dimen name="watchlist_button_height">36dp</dimen>
-    <dimen name="trailer_image_button_width">100dp</dimen>
+    <dimen name="trailer_image_button_width">160dp</dimen>
     <dimen name="trailer_image_button_height">100dp</dimen>
+
+    <dimen name="review_text_view_height">165dp</dimen>
 </resources>
